# ScoutAI

./: Chat.py  ChatgptScoutAI.py  GUI.py  README.md  ScoutAI.code-workspace  ScoutAIChat.py  Testing.py  chat  chatUI.py  chatbot expanded.py  chatbot.py  config.json  get_embedding_function.py  populate_database.py  pyproject.toml  query_data.py  requirements.txt  scoutbot.py  testing2.py
V1.0/: README.md  chat  chatbot expanded.py  logging_models.py  pyproject.toml  requirements.txt
