[tool.poetry]
name = "scout"
version = "0.1.0"
description = ""
authors = ["IamSpotted <I_am_spotted@iamspotted.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
langchain-openai = "^0.1.20"
unstructured = {extras = ["md"], version = "^0.15.1"}
onnxruntime = "^1.18.1"
chromadb = "^0.5.5"
openai = "^1.40.3"
tiktoken = "^0.7.0"
langchain-huggingface = "^0.0.3"
sentence-transformers = "^3.0.1"
pypdf = "^4.3.1"
pytest = "^8.3.2"
boto3 = "^1.34.158"
langchain-chroma = "^0.1.2"
protobuf = "3.20.*"
langchain-ollama = "^0.1.1"
langchain-core = "^0.2.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
